# SymulacjaZycia

./: CMakeLists.txt  CMakeSettings.json  Documentation.md  Grid.h  Organism.h  README.md  Rows.h  SymulacjaZycia.cpp  Vicinity.h  settings.txt
Headers/: Grid.h  Organism.h  RandomGenerator.h  Rows.h  Vicinity.h
Tests/: TestOrganismStatistics.cpp  TestReadWrite.cpp  TestRows.cpp  TestingUtilities.h
